# dotfiles

./: .gitignore  .tmux.conf  README.md
.build/cppbuild/: .ccls  .vimspector.json  CMakeLists.txt  Makefile  buil.sh  ccmake.sh  cctest.sh
.config/: .tmux.conf  _norm  sessions  starship.toml
.config/Autodesk/: FusionFabrication.FusionNesting
.config/chatGpt/: 2023-01-2907:43:23.json  2023-01-2915:22:03.json  2023-02-0217:25:59.json  2023-02-0217:35:54.json  2023-02-0418:58:27.json  2023-03-1216:24:04.json  2023-03-1216:29:42.json  2023-03-2913:58:37.json  2023-03-2914:06:34.json  2023-07-1116:08:34.json  2023-07-1200:42:47.json  SettingChatGPT.json  rust_server.json  toto.json
.config/coc/: snippets-mru  suggest.txt
.config/config/: .tmux.conf  config.fish  init.lua  init.vim  nmap.vim  rc.conf
.config/filezilla/: filezilla.xml  layout.xml
.config/fish/: README.md  config.fish  fish_plugins  fish_variables  test  touch2
.config/github-copilot/: hosts.json  terms.json  versions.json
.config/gtk-2.0/: gtkfilechooser.ini
.config/nvcode-color-schemes.vim/: Controle_C.vim  nmap.vim  nvcode.yml
.config/nvim/: README.md  coc-settings.json  color.itermcolors  init.lua  init.vim  lazy-lock.json  main.c  tags  wax.vim
.config/omf/: bundle
.config/ranger/: install  rc.conf
.config/scripts/: git-branch-manager.sh
.config/tmux/: README.md  buffer.conf  fzf_window_name.sh  get_ip.sh  tmux.reset.conf  tmux_gitbranch.sh  tmux_path.sh  tmux_prefix.sh  (+1 more)
.tmux/: battery.sh  track.sh
nvim/: .ccls  .vimspector.json
tmux/: .tmux.conf
zshrc/: .zshrc
(+142 files in other folders)
